# resume-tailoring-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml
.claude/: settings.json
.superpowers/sdd/: t2-llm-report.md  t6-tester-report.md
backend/: pyproject.toml
backend/app/: adapters.py  backend_api.py  config.py  database.py  deps.py  main.py  ports.py  prompts.py  simulator.py  yaml_utils.py
backend/app/routes/: chat.py  evaluate.py  health.py  master_resume.py  resumes.py  rules.py  system_prompt.py
backend/db/: schema.sql
backend/rendercv_config/: design.yaml  settings.yaml
backend/tests/: conftest.py  test_database.py  test_llm.py  test_routes_chat.py  test_routes_evaluate.py  test_routes_health.py  test_routes_master_resume.py  test_routes_resumes.py  test_routes_rules.py  test_routes_system_prompt.py  test_yaml_utils.py
backend/tests/helpers/: simulator.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
planning/: PLAN.md  backendAPI_interface.md  backend_API.md  backend_simulator.md  example-Prompt.md  example-master-resume.yaml
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: package-lock.json  package.json  playwright.config.ts
test/e2e/: 01-fresh-start.spec.ts  02-master-resume.spec.ts  03-pdf-upload.spec.ts  04-generation.spec.ts  05-chat.spec.ts  06-resume-list-sort.spec.ts  07-evaluation.spec.ts  08-rules.spec.ts
test/fixtures/: mock-constants.ts  sample-jd.txt  sample-resume.yaml
(+36 files in other folders)
