[project]
name = "resumetailor-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.40.0",
    "rendercv[full]>=2.8",
    "pymupdf>=1.24.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "anyio[asyncio]>=4.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
